# typer-demo

./: .flake8  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
cicd/: testrail.py  version-bump.sh
docs/: DESIGN.md
tests/: test_1.py  tests_1.py
typer-demo/: pyproject.toml
typer-demo/tests/: test_1.py
typer-demo/typer_demo/: __init__.py
typer_demo/: __init__.py  app.py  files_app.py
